# ai-playground

./: .gitmodules
courses/llm/book-recommender/: data-exploration.ipynb
models/quantization/: README.md  pyproject.toml  quantize_gptq.py  requirements.txt  test_model.py
monitoring/: docker-compose.yaml
monitoring/prometheus/: alertmanager.yml  prometheus.yml  rules.yml
scripts/: main.py  pyproject.toml
scripts/ansible/: config.md  inventory.yml
scripts/ansible/roles/ssh-tunnel-and-watchdog/: README.md
scripts/ansible/roles/ssh-tunnel-and-watchdog/defaults/: main.yml
scripts/ansible/roles/ssh-tunnel-and-watchdog/templates/: scheduled-reboot.timer.j2  watchdog.conf.j2
scripts/bot/: main.py  requirements.txt  telegram_bot.py
scripts/chat/: chat.py  main.py  pyproject.toml  test.py
scripts/llamacpp/: buun-llama-cpp.sh
scripts/mlx/ocr/glm/: README.md
scripts/mlx/test/: agent.py  bot.py  chat.py  main.py  pyproject.toml
scripts/test/: main.py  pyproject.toml
scripts/transcribe/: bot.py  main.py  models.py  pyproject.toml  utils.py
scripts/transformers/agent/: main.py  pyproject.toml
scripts/transformers/chat/: main.py  pyproject.toml
scripts/transformers/qwen3.5/: 1  main.py  pyproject.toml
scripts/transformers/vlm/: main.py  pyproject.toml
scripts/yolo/: .gitignore  detect_objects.py  pyproject.toml
setup/: nvidia-driver.sh
setup/ansible/: ansible.cfg  apply-ai-server.yml  apply-ssh-tunnel.yml  inventory.yml
setup/ansible/roles/ai-server/: README.md
setup/bot/: install_on_remote.sh  send_startup.py  setup.sh  telegram_bot.py
setup/dotfiles/: .zshrc  setup.sh
setup/dotfiles/.config/btop/: btop.conf
setup/dotfiles/.config/opencode/: opencode.json
setup/dotfiles/.config/zed/: settings.json
setup/dotfiles/.hermes/: .env  config.yaml
setup/dotfiles/.hermes/skins/: README.md  bubblegum-80s.yaml  lain.yaml  mythos.yaml  neonwave.yaml  netrunner.yaml  nous.yaml  pirate.yaml  sakura.yaml  skynet.yaml  vault-tec.yaml
setup/dotfiles/.pi/agent/: models.json  settings.json
setup/nvidia/: 01-install-toolkit.sh
setup/systemd/system/: wol.service
tools/: ai-tools.sh  docker-compose-latest.yaml  docker-compose-prev.yaml  docker-compose.yaml  nvidia-toolkit.sh  setup-nvidia-cuda-ubuntu24.sh
tools/agent/hermes/: Dockerfile
tools/agent/openclaw/: docker-compose.yaml
tools/llm/llamacpp/: REAME.md  docker-compose-code-assistant.yaml  docker-compose-glm4.5-air.yaml  docker-compose-thinking.yaml  docker-compose.yaml
tools/llm/llamacpp/config/: copy_configs.sh
tools/llm/llamacpp/docker/: docker-compose-deepseek-coder.yaml  docker-compose-gemma-4-26b-it.yaml  docker-compose-gemma-4-31b-it.yaml  docker-compose-gemma-4.yaml  docker-compose-glm-5.1.yaml  docker-compose-glm4.5-air.yaml  docker-compose-glm4.6-flash.yaml  docker-compose-glm4.7-flash-uncensored.yaml  docker-compose-glm4.7-flash.yaml  docker-compose-gpt-oss-120.yaml  docker-compose-instruct-devstral-2.yaml  docker-compose-instruct-qwen3-next.yaml  docker-compose-instruct.yaml  docker-compose-minimax-m2.7.yaml  docker-compose-qwen3-coder-next.yaml  docker-compose-qwen3.5-122b.yaml  docker-compose-qwen3.5-27b.yaml  docker-compose-qwen3.5-35b-aggressive.yaml  docker-compose-qwen3.5-35b.yaml  docker-compose-qwen3.5-9b-ultra-heretic.yaml  docker-compose-qwen3.5.yaml  docker-compose-qwen3.6-27b.yaml  docker-compose-thinking-glm4.7-cpu.yaml  docker-compose-thinking-glm4.7.yaml  docker-compose-thinking-minimax-2.1.yaml  docker-compose-thinking-step-3.5-flash.yaml  docker-compose-thinking.yaml
tools/llm/llamacpp/scripts/: llamacpp-glm-4.7.sh
tools/llm/llamacpp/source/: README.md  TESTING.md  build.sh  llamacpp-cli-bonsai-8b.sh  llamacpp-gemma-4-31b-it.sh  llamacpp-glm-4.5-air.sh  llamacpp-glm-4.7.sh  llamacpp-minimax-2.1-uncensored.sh  llamacpp-minimax-2.1.sh  llamacpp-nvidia-nemotron-3-nano.sh  llamacpp-qwen3-next-gpu.sh  llamacpp-qwen3-next.sh  llamacpp-qwen3.5-27b.sh
tools/llm/mini-sglang/: .dockerignore  Dockerfile  docker-compose.yml
tools/llm/sglang/docker/: docker-compose-minimax-m2.5.yaml  docker-compose-minimax-m2.7-hf.yaml  docker-compose-minimax-m2.7.yaml  docker-compose.yaml  docker-compose.yml
tools/llm/sglang/source/: build-source.sh
tools/llm/vllm/: docker-compose-code-assistant.yaml  docker-compose-configs.yaml  docker-compose-glm-4.5-air.yaml  docker-compose-glm-4.7-flash.yaml  docker-compose-qwen3-next.yaml  docker-compose.yaml  requirements.txt  vllm.sh
tools/llm/vllm/dflash/: docker-compose.yaml  pyproject.toml
tools/llm/vllm/docker/: docker-compose-deepseek-v4-flash-autoround.yaml  docker-compose-gemma-4-31b-nvfp4.yaml  docker-compose-minimax-m2.7-nccl.yaml  docker-compose-minimax-m2.7.yaml  docker-compose-nemotron-120b-nvfp4.yaml  docker-compose-nemotron-120b.yaml  docker-compose-nvidia-nemotron-3-nano-omni-30b-nvfp4.yaml  docker-compose-qwen3.5-122b-nvfp4.yaml  docker-compose-qwen3.5-27b-awq-2gpu.yaml  docker-compose-qwen3.5-27b-awq.yaml  docker-compose-qwen3.6-27b-fp8-dflash.yaml  docker-compose-qwen3.6-27b-fp8.yaml  docker-compose-qwen3.6-27b-nvfp4-dflash.yaml  docker-compose-qwen3.6-27b-nvfp4.yaml  docker-compose-qwen3.6-35b-nvfp4-dflash.yaml  docker-compose-qwen3.6-35b-nvfp4.yaml  docker-compose-template.yaml
tools/llm/vllm/scripts/: .webui_secret_key  INSTALL.md  config.yaml  inference.py  main.py  pyproject.toml  quant.py  requirements.txt  server.sh  vllm.sh
tools/llm/vllm/source/: TESTING.md  build-source.sh  docker-compose-nemotron-120b.yaml  docker-compose-qwen3.5-27b-awq.yaml  docker-compose.yml  install.sh  minimax-m2.7.md  minimax-m2.7.sh  parallel-requests.sh  parallel_requests.py  pyproject.toml  requirements.txt  vllm-minimax-2.5.sh  vllm-nemotron-super-120b.sh  vllm.sh
tools/stable-diffusion/: docker-compose.yaml  ltx2.3-video.md
tools/stable-diffusion/comfyui/: ltx2.3-video.md
tools/stable-diffusion/forge/: .Dockerfile.swp  Dockerfile
tools/tts/chatterbox/: Dockerfile  REAME.md  requirements.txt
tools/tts/chatterbox/code/: multilingual.py  test.py  (+1 more)
tools/tts/lfm-audio/: test.py
tools/workflows/: docker-compose.yaml
(+45 files in other folders)
