[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "transformers>=4.57.3",
  "diffusers>=0.35.2",
  "accelerate>=1.12.0",
  "colorama>=0.4.6",
  "bitsandbytes>=0.48.2",
  "vllm>=0.12.0"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
