[project]
name = "llm-quantization"
version = "0.0.1"
description = "LLM Models Quantization"
requires-python = ">=3.10,<3.14"
dependencies = [
    "compressed-tensors>=0.15.1a20260409",
    "datasets>=4.8.4",
    "llmcompressor @ git+https://github.com/vllm-project/llm-compressor@0.10.0.1",
    "torch>=2.11.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = []

[tool.uv]
concurrent-builds = 48
