[project]
name = "llm-mlx-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "colorama>=0.4.6",
    "langchain>=1.2.7",
    "torch>=2.10.0",
    "transformers>=4.0",
    "mlx-lm>=0.29.1",
    "bitsandbytes",
    "smolagents>=1.24.0",
    "ddgs>=9.10.0",
    "huggingface-hub>=0.36.1",
]
