[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "torch",
    "bitsandbytes",
    "termcolor>=3.3.0",
    "protobuf>=6.33.5",
    "sentencepiece>=0.2.1",
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "pillow>=12.1.1",
    "torchvision>=0.24.1",
]
