[project]
name = "qwen3-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "einops>=0.8.2",
    "ninja>=1.13.0",
    "datasets>=4.6.1",
    "numpy>=2.4.2",
    "transformers",
    "flash-linear-attention",
    "causal-conv1d",
]

[tool.uv.sources]
transformers           = { git = "https://github.com/huggingface/transformers.git",   tag = "v5.3.0" }
flash-linear-attention = { git = "https://github.com/fla-org/flash-linear-attention", tag = "v0.4.1" }
causal-conv1d          = { git = "https://github.com/Dao-AILab/causal-conv1d",        tag = "v1.6.0" }