[project]
name = "vllm-project"
version = "0.18.1"
description = "vLLM: High-Performance Serving for Large Language Models"
requires-python = ">=3.10,<3.14"
dependencies = [
    "vllm @ git+https://github.com/vllm-project/vllm.git@v0.18.1",
]

[dependency-groups]
dev = []

[tool.uv]
concurrent-builds = 48
